# myFirstRepos

./: .classpath  .project  README.txt  codeFile1.txt  codeFile2.txt  codeFile3.txt  codeFile5.txt  me.txt  me3.txt  myKey.txt  newFile1.txt  newFileBranch1.txt  newFileCACI.txt  newFileCACI2.txt  newFileUb1_1.txt  newFileviaWeb.txt  test.txt
RPi/startrun/: runImageSend  rungrabber
RPi_del/startRun/: runImageSend.bak
XBee/: .classpath
XBee/myFirstXBeeApp/: .classpath  .project  run.bat  runbb
boneCV/: build  capture
dev10/startrun/: piwigo_import_tree.pl  runImageRcv~  runImageRecv  runImageRecv~  runMoveImages  runMoveImages~  runVnc
imageHandling/imageSendRecv/: .classpath  .project  runRcv  test.txt
opencv/.metadata/: version.ini
opencv/grabber/: build  grabber  grabber.cpp  makefile  makefile.bak  run  utils.cpp
opencv/grabber1/: .cproject  grabber.cpp
opencv/grabber6/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  SocketServer.cpp  SocketServer.h  cmake_install.cmake  grabber.cpp  grabber4_settings.xml  grabber6  grabber_bak.cpp  server.cpp  utils.cpp  utils.hh
qtProj/: Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_mytextblock.cpp  mytextblock.cpp  mytextblock.h  mytextblock.h.autosave  qtProj  qtProj.pro  ui_mainwindow.h
startrun_RPi/: .runImageRecvTmp.swp  build_cubicSDR  dictionary.txt  runCubicSDR  runImageRecvTmp  runSoapyServer  rungrabber
startrun_Ubuntu/: piwigo_import_tree.pl.bak  piwigo_import_tree.pl~  runImageRecvTest  runMoveImages  runVnc  runVnc~  rungrabber
temp/: hash.txt
(+858 files in other folders)
